#
# Copyright 2016, NICTA
#
# This software may be distributed and modified according to the terms of
# the BSD 2-Clause license. Note that NO WARRANTY is provided.
# See "LICENSE_BSD2.txt" for details.
#
# @TAG(NICTA_BSD)
#

[package]
name = "btreemap"
version = "0.0.1"
authors = ["Kent McLeod <kent.mcleod@data61.csiro.au>"]
description = "expose some btreemap functions as c symbols"
build = "build.rs"

[lib]
name = "btreemap"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
sel4-start = { path = "/home/gdritter/build/robigalia/sel4-start" }
sel4-alloc = { path = "/home/gdritter/build/robigalia/sel4-alloc" }

[dependencies.sel4-sys]
path = "/home/gdritter/build/robigalia/sel4-sys"
default-features = false

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
