#
# Copyright 2016, NICTA
#
# This software may be distributed and modified according to the terms of
# the BSD 2-Clause license. Note that NO WARRANTY is provided.
# See "LICENSE_BSD2.txt" for details.
#
# @TAG(NICTA_BSD)
#

[package]
name = "main"
version = "0.0.1"
authors = ["Kent McLeod <kent.mcleod@data61.csiro.au>"]
description = "Sample rust hello world on camkes"
build = "build.rs"

[build-dependencies]
bindgen = "0.31.3"

[lib]
name = "main"
path = "src/entrypoint.rs"
crate-type = ["staticlib"]
