[package]
name = "helper"
version = "0.0.1"
authors = ["Getty Ritter <gdritter@galois.com>"]
description = "Sample rust hello world on camkes"

[lib]
name = "helper"
path = "src/entrypoint.rs"
crate-type = ["staticlib"]

[dependencies.sel4-sys]
path = "../../../../robigalia/sel4-sys"
default-features = false
